--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 <body>
     <header>
         <h1>Curiosidade de tecnologia</h1>
-        <p>Tudo aquilo que você sempre quis saber sobre o mundo tech,em un único lugar</p>
+        <p>Tudo aquilo que você sempre quis saber sobre o mundo tech,em um único lugar</p>
     </header>
     <nav>
         <a href="#">Home</a>
         <a href="#">Noticias</a>
-        <a href="#">Curiosidade</a>
-        <a href="#">Fale conosco</a>
+        <a href="#">Contanto</a>
     </nav>
     <main>
         <article>
