--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <p>Tudo aquilo que você sempre quis saber sobre o mundo tech,em um único lugar</p>
     </header>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Noticias</a>
-        <a href="#">Contanto</a>
+        <a class="anima" href="#">Home</a>
+        <a class="anima" href="#">Noticias</a>
+        <a class="anima" href="#">Contanto</a>
     </nav>
     <main>
         <article>
